@@ -9,11 +9,11 @@
   <parent>
     <groupId>com.fasterxml.jackson</groupId>
     <artifactId>jackson-base</artifactId>
-    <version>2.16.0-SNAPSHOT</version>
+    <version>2.16.3-SNAPSHOT</version>
   </parent>
   <groupId>com.fasterxml.jackson.core</groupId>
   <artifactId>jackson-databind</artifactId>
-  <version>2.16.0-SNAPSHOT</version>
+  <version>2.16.3-SNAPSHOT</version>
   <name>jackson-databind</name>
   <packaging>jar</packaging>
   <description>General data-binding functionality for Jackson: works on core streaming API</description>
@@ -46,8 +46,8 @@
          Baseline compatibility:
 
          * Jackson 2.13 compatible with Android SDK 24 and up
-         * Jackson 2.14 compatible with Android SDK 26 and up
-         * Jackson 2.15 compatible with Android SDK 26 and up
+         * Jackson 2.14, 2.15 compatible with Android SDK 26 and up
+         * Jackson 2.16 compatible with Android SDK 26 and up
 
       -->
     <version.android.sdk>26</version.android.sdk>
@@ -68,7 +68,7 @@
     <version.powermock>2.0.9</version.powermock>
 
     <!-- for Reproducible Builds -->
-    <project.build.outputTimestamp>2023-04-23T21:43:15Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2024-03-09T18:52:54Z</project.build.outputTimestamp>
   </properties>
 
   <dependencies>
@@ -97,6 +97,11 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency> <!-- added in 2.16 -->
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -223,8 +228,8 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
           <links combine.children="append">
-            <link>https://fasterxml.github.io/jackson-annotations/javadoc/2.14</link>
-            <link>https://fasterxml.github.io/jackson-core/javadoc/2.14</link>
+            <link>https://fasterxml.github.io/jackson-annotations/javadoc/2.16</link>
+            <link>https://fasterxml.github.io/jackson-core/javadoc/2.16</link>
           </links>
         </configuration>
       </plugin>
@@ -292,9 +297,9 @@
     </profile>
     <!-- 07-Dec-2021, tatu: This is a huge mess, sorry folks... -->
     <profile>
-      <id>java14</id>
+      <id>java11</id>
       <activation>
-        <jdk>14</jdk>
+        <jdk>11</jdk>
       </activation>
       <build>
         <plugins>
@@ -310,7 +315,7 @@
                 </goals>
                 <configuration>
                   <sources>
-                    <source>src/test-jdk14/java</source>
+                    <source>src/test-jdk11/java</source>
                   </sources>
                 </configuration>
               </execution>
@@ -321,15 +326,15 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <inherited>true</inherited>
             <configuration>
-              <!-- Enable Java 14+ for all sources so that Intellij picks the right language level -->
-              <source>14</source>
-              <release>14</release>
+              <!-- Enable Java 11+ for all sources so that Intellij picks the right language level -->
+              <source>11</source>
+              <release>11</release>
               <compilerArgs>
                 <arg>-parameters</arg>
                 <arg>--enable-preview</arg>
               </compilerArgs>
-            	<fork>true</fork>
-            	<useIncrementalCompilation>true</useIncrementalCompilation>
+              <fork>true</fork>
+              <useIncrementalCompilation>true</useIncrementalCompilation>
             </configuration>
           </plugin>
           <plugin>
@@ -362,7 +367,7 @@
                 </goals>
                 <configuration>
                   <sources>
-                    <source>src/test-jdk14/java</source>
+                    <source>src/test-jdk11/java</source>
                     <source>src/test-jdk17/java</source>
                   </sources>
                 </configuration>
@@ -377,6 +382,59 @@
               <!-- Enable Java 17 for all sources so that Intellij picks the right language level -->
               <source>17</source>
               <release>17</release>
+              <compilerArgs>
+                <arg>-parameters</arg>
+                <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
+                <arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
+              </compilerArgs>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <!-- And different set up for JDK 21 -->
+      <id>java21</id>
+      <activation>
+        <jdk>21</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>add-test-source</id>
+                <phase>generate-test-sources</phase>
+                <goals>
+                  <goal>add-test-source</goal>
+                </goals>
+                <configuration>
+                  <sources>
+                    <source>src/test-jdk11/java</source>
+                    <source>src/test-jdk17/java</source>
+                    <source>src/test-jdk21/java</source>
+                  </sources>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <inherited>true</inherited>
+            <configuration>
+              <!-- Enable Java 21 for all sources so that Intellij picks the right language level -->
+              <source>21</source>
+              <release>21</release>
               <compilerArgs>
                 <arg>-parameters</arg>
                 <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
